--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <h1>index.html(컴퓨터과학과 2310771 손민아)</h1>
     <hr>
     <ul class ="nav flex-column">
-        <li class="pd-3"><a href="#">실습과제 1_HTML</a><span class ="badge bg-primary">제출완료</span></li>
-        <li class="pd-3"><a href="#">실습과제 2_CSS</a><span class ="badge bg-primary">제출완료</span></li>
-        <li class="pd-3"><a href="#">실습과제 3_Layout</a><span class ="badge bg-primary">제출완료</span></li>
-        <li class="pd-3"><a href="#">실습과제 4_JavaScript 1</a><span class ="badge bg-danger">제출예정</span></li>
-        <li class="pd-3"><a href="#">실습과제 5_JavaScript 2</a><span class ="badge bg-danger">제출예정</span></li>
+        <li class="pb-3"><a href="#">실습과제 1_HTML</a><span class ="badge bg-primary">제출완료</span></li>
+        <li class="pb-3"><a href="#">실습과제 2_CSS</a><span class ="badge bg-primary">제출완료</span></li>
+        <li class="pb-3"><a href="#">실습과제 3_Layout</a><span class ="badge bg-primary">제출완료</span></li>
+        <li class="pb-3"><a href="#">실습과제 4_JavaScript 1</a><span class ="badge bg-danger">제출예정</span></li>
+        <li class="pb-3"><a href="#">실습과제 5_JavaScript 2</a><span class ="badge bg-danger">제출예정</span></li>
     </ul> 
     </div>
 </body>
