--- a/index.html
+++ b/index.html
@@ -3,21 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2310771 손민아</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <title>Document</title>
 </head>
 <body>
-    <div class ="container mt-3">
-    <h1>index.html(컴퓨터과학과 2310771 손민아)</h1>
-    <hr>
-    <ul class ="nav flex-column">
-        <li class="pb-3"><a href="#">실습과제 1_HTML</a><span class ="badge bg-primary">제출완료</span></li>
-        <li class="pb-3"><a href="#">실습과제 2_CSS</a><span class ="badge bg-primary">제출완료</span></li>
-        <li class="pb-3"><a href="#">실습과제 3_Layout</a><span class ="badge bg-primary">제출완료</span></li>
-        <li class="pb-3"><a href="#">실습과제 4_JavaScript 1</a><span class ="badge bg-danger">제출예정</span></li>
-        <li class="pb-3"><a href="#">실습과제 5_JavaScript 2</a><span class ="badge bg-danger">제출예정</span></li>
-    </ul> 
-    </div>
+    <h1>Project 주제 소개</h1><br><hr>
+    <h2>주제: 내가 사는 지역의 간단한 인프라를 소개하는 웹사이트</h2><br>
+    <h4>내용: 지역에 대한 간단한 소개 및 음식점(맛집 및 디저트 카페) 위주 인프라 설명하는
+        내용이 들어갈 예정.+ 맛집 등 공유하고 싶은 인프라를 작성하는 게시판</h4>
+
+    <a href ="Login.html">웹페이지로 바로가기</a><br><hr><br>
+
+    <h4>진행상황</h4>
+    <p>6/4 화: 진행상황 공유 웹제작+넣을 정보 수집</p>
 </body>
 </html>
