--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h4>내용: 지역에 대한 간단한 소개 및 음식점(맛집 및 디저트 카페) 위주 인프라 설명하는
         내용이 들어갈 예정.+ 맛집 등 공유하고 싶은 인프라를 작성하는 게시판</h4>
 
-    <a href ="websystem/Login.html">웹페이지로 바로가기</a><br><hr><br>
+    <a href ="Login.html">웹페이지로 바로가기</a><br><hr><br>
 
     <h4>진행상황</h4>
     <p>6/4 화: 진행상황 공유 웹제작+넣을 정보 수집</p>
