--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
     <h4>내용: 지역에 대한 간단한 소개 및 음식점(맛집 및 디저트 카페) 위주 인프라 설명하는
         내용이 들어갈 예정.+ 맛집 등 공유하고 싶은 인프라를 작성하는 게시판</h4>
 
-    <a href ="Login.html">웹페이지로 바로가기</a><br><hr><br>
+    <a href ="main.html">웹페이지로 바로가기</a><br><hr><br>
 
     <h4>진행상황</h4>
     <p>6/4 화: 진행상황 공유 웹제작+넣을 정보 수집</p>
     <p>6/6 목: 자바스크립트 적용시켜 첫화면 구성</p>
+    <p>6/15 토: 기본적인 메뉴 적용 및 메인페이지 화면구성+소개화면구성</p> 
+    <p>6/16 일: 맛집과 카페 소개페이지 구성+로그인화면구성+지도화면 구성</p> 
+    <p>6/17 월: 회원가입페이지 구성+웹스토리지를 이용한 회원가입 상태 저장+게시판 화면 및 문의 페이지 구성</p>
+    <p>6/18 화: 전체적인 화면 구성 다듬기+로그인상태판별 자바스크립트 작성</p>
+    
 </body>
 </html>
