--- a/food_cafe.html
+++ b/food_cafe.html
@@ -109,7 +109,7 @@
               <h4>비읍커피</h4>
               <p>분위기좋고 넓은 감성카페. 크로플 추천!</p>
               <a href="images/cafe1.jpg" title="비읍커피" data-gallery="portfolio-gallery-nobranding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-              <a href="https://naver.me/xjeJVbjj" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              <a href="https://naver.me/xnKnnuAf" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
             </div>
           </div><!-- End Item -->
 
