--- a/main.html
+++ b/main.html
@@ -27,6 +27,12 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
+  <style>
+    .testimonial-item p{
+      color:black;
+    }
+  </style>
+
 </head>
 
 <body class="starter-page-page">
