--- a/review2.html
+++ b/review2.html
@@ -135,6 +135,17 @@
             <h4 class="comments-count">0 Comments</h4>
 
        
+            <script>
+              function check(){
+              let currentUser = localStorage.getItem('currentUser');
+              if (currentUser=== null) {
+              alert("가입한 회원만 이용할 수 있는 기능입니다.")
+              
+            }
+              }
+            </script>
+
+
             <div class="reply-form" id="myreply">
 
               <h4>Leave a Reply</h4>
@@ -153,7 +164,7 @@
                 </div>
 
                 <div class="text-center">
-                  <button type="submit" class="btn btn-primary">Post Comment</button>
+                  <button type="submit" class="btn btn-primary" onclick="check()">Post Comment</button>
                 </div>
 
               </form>
