--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <p>6/15 토: 기본적인 메뉴 적용 및 메인페이지 화면구성+소개화면구성</p> 
     <p>6/16 일: 맛집과 카페 소개페이지 구성+로그인화면구성+지도화면 구성</p> 
     <p>6/17 월: 회원가입페이지 구성+웹스토리지를 이용한 회원가입 상태 저장+게시판 화면 및 문의 페이지 구성</p>
-    <p>6/18 화: 전체적인 화면 구성 다듬기+로그인상태판별 자바스크립트 작성</p>
+    <p>6/18 화: 전체적인 화면 구성 다듬기+로그인상태판별 후 기능사용 자바스크립트 작성</p>
+    <p>6/19 수: 게시판 넘기기 기능 + css다듬기 + 보고서 작성 </p>
     
 </body>
 </html>
